--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,16 @@ header{
 	margin-bottom: 5vh;
 }
 
+a {
+	text-decoration: none;
+	color: #ffa848;
+}
+
+a:hover{
+	color: white;
+	transition: color .5s;
+}
+
 .title{
 	color: #ffa848;
 	font-size: 45px;
@@ -50,11 +60,6 @@ header{
 	align-items: center;
 	padding-left: 6%;
 	padding-right: 6%;
-}
-
-.buttons:hover{
-	color: white;	
-	transition: color .5s;
 }
 
 main{
